--- a/MitosisTimesheet/src/main/webapp/reports/pendingInvoiceReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/pendingInvoiceReport.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="pendingInvoiceReport" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="80"/>
+	<property name="ireport.zoom" value="1.5"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="firstday" class="java.lang.String"/>
 	<parameter name="lastday" class="java.lang.String"/>
@@ -12,6 +12,7 @@ where project.id = pjtcost.project_id
 and cust.id = project.customer_id
 and project.id not in (select project_id from invoice_hdr  where  invoice_date between $P{firstday} and $P{lastday})
 and project.status='Open'
+and project.billable = 'Yes'
 order by cust.customer_name]]>
 	</queryString>
 	<field name="customer_name" class="java.lang.String"/>
