--- a/MitosisTimesheet/src/main/webapp/reports/employeeDetailsReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/employeeDetailsReport.jrxml
@@ -4,7 +4,8 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<queryString>
-		<![CDATA[SELECT user_details.email,(SELECT count(*) from employee_master) as employee_count,employee_master.employee_id,employee_master.first_name, employee_master.last_name, lob_master.lob_name
+		<![CDATA[SELECT user_details.email,(SELECT count(*) from employee_master) as employee_count,employee_master.employee_id,employee_master.first_name, employee_master.last_name,employee_master.years_of_exp,employee_master.months_of_exp,
+ lob_master.lob_name
 FROM employee_master
 LEFT OUTER JOIN lob_master
 ON employee_master.lob_id=lob_master.id
@@ -17,6 +18,8 @@ order by lob_name,employee_master.employee_id]]>
 	<field name="employee_id" class="java.lang.String"/>
 	<field name="first_name" class="java.lang.String"/>
 	<field name="last_name" class="java.lang.String"/>
+	<field name="years_of_exp" class="java.lang.Integer"/>
+	<field name="months_of_exp" class="java.lang.String"/>
 	<field name="lob_name" class="java.lang.String"/>
 	<variable name="totalemployees" class="java.lang.Integer" resetType="Group" resetGroup="lob" calculation="Count">
 		<variableExpression><![CDATA[$F{employee_id}]]></variableExpression>
@@ -39,33 +42,49 @@ order by lob_name,employee_master.employee_id]]>
 					<reportElement x="0" y="47" width="555" height="33"/>
 				</rectangle>
 				<staticText>
-					<reportElement x="9" y="52" width="79" height="20"/>
+					<reportElement x="9" y="52" width="65" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Employee Id]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="108" y="52" width="100" height="20"/>
+					<reportElement x="81" y="52" width="79" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[First Name]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="253" y="52" width="100" height="20"/>
+					<reportElement x="172" y="52" width="82" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Last Name]]></text>
 				</staticText>
 				<line>
-					<reportElement x="96" y="47" width="1" height="33"/>
+					<reportElement x="75" y="47" width="1" height="33"/>
 				</line>
 				<line>
-					<reportElement x="227" y="47" width="1" height="33"/>
+					<reportElement x="166" y="47" width="1" height="33"/>
 				</line>
 				<line>
-					<reportElement x="372" y="47" width="1" height="33"/>
+					<reportElement x="267" y="47" width="1" height="33"/>
 				</line>
 				<staticText>
-					<reportElement x="407" y="52" width="98" height="20"/>
+					<reportElement x="298" y="52" width="98" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Email Id]]></text>
+				</staticText>
+				<line>
+					<reportElement x="432" y="47" width="1" height="33"/>
+				</line>
+				<staticText>
+					<reportElement x="436" y="50" width="56" height="30"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[Exp in Years]]></text>
+				</staticText>
+				<line>
+					<reportElement x="492" y="47" width="1" height="33"/>
+				</line>
+				<staticText>
+					<reportElement x="493" y="47" width="62" height="33"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[Exp in Months]]></text>
 				</staticText>
 			</band>
 		</groupHeader>
@@ -74,24 +93,18 @@ order by lob_name,employee_master.employee_id]]>
 				<rectangle>
 					<reportElement x="0" y="0" width="555" height="27"/>
 				</rectangle>
-				<line>
-					<reportElement x="227" y="0" width="1" height="27"/>
-				</line>
 				<staticText>
-					<reportElement x="228" y="0" width="144" height="27"/>
+					<reportElement x="268" y="0" width="224" height="27"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Total]]></text>
 				</staticText>
-				<line>
-					<reportElement x="96" y="0" width="1" height="27"/>
-				</line>
 				<textField isBlankWhenNull="true">
-					<reportElement x="373" y="2" width="182" height="25"/>
+					<reportElement x="492" y="2" width="63" height="25"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression class="java.lang.Integer"><![CDATA[$V{totalemployees}]]></textFieldExpression>
 				</textField>
 				<line>
-					<reportElement x="372" y="0" width="1" height="28"/>
+					<reportElement x="492" y="0" width="1" height="28"/>
 				</line>
 			</band>
 		</groupFooter>
@@ -111,41 +124,57 @@ order by lob_name,employee_master.employee_id]]>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="49"/>
+		<band height="47"/>
 	</pageHeader>
 	<detail>
-		<band height="37">
+		<band height="36">
 			<rectangle>
 				<reportElement x="0" y="0" width="555" height="36"/>
 			</rectangle>
 			<textField isBlankWhenNull="true">
-				<reportElement x="100" y="9" width="127" height="20"/>
+				<reportElement x="76" y="2" width="91" height="34"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{first_name}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="228" y="9" width="145" height="20"/>
+				<reportElement x="166" y="2" width="101" height="34"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{last_name}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="96" y="0" width="1" height="36"/>
+				<reportElement x="75" y="0" width="1" height="36"/>
 			</line>
 			<line>
-				<reportElement x="227" y="0" width="1" height="36"/>
+				<reportElement x="166" y="0" width="1" height="36"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="9" y="9" width="79" height="20"/>
+				<reportElement x="9" y="9" width="55" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{employee_id}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="372" y="0" width="1" height="36"/>
+				<reportElement x="267" y="0" width="1" height="36"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="373" y="0" width="175" height="36"/>
+				<reportElement x="267" y="0" width="165" height="36"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{email}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="432" y="0" width="1" height="36"/>
+			</line>
+			<line>
+				<reportElement x="492" y="0" width="1" height="36"/>
+			</line>
+			<textField>
+				<reportElement x="434" y="2" width="59" height="34"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{years_of_exp}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="492" y="0" width="63" height="36"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{months_of_exp}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -164,18 +193,15 @@ order by lob_name,employee_master.employee_id]]>
 				<reportElement x="0" y="15" width="555" height="27"/>
 			</rectangle>
 			<line>
-				<reportElement x="228" y="15" width="1" height="27"/>
-			</line>
-			<line>
-				<reportElement x="373" y="16" width="1" height="26"/>
+				<reportElement x="491" y="16" width="1" height="26"/>
 			</line>
 			<staticText>
-				<reportElement x="253" y="20" width="104" height="20"/>
+				<reportElement x="268" y="16" width="223" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<text><![CDATA[Total Employees]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement x="407" y="20" width="127" height="20"/>
+				<reportElement x="493" y="16" width="62" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.Long"><![CDATA[$F{employee_count}]]></textFieldExpression>
 			</textField>
