--- a/MitosisTimesheet/src/main/webapp/reports/LeaveReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/LeaveReport.jrxml
@@ -8,8 +8,8 @@
 	<field name="employee.name" class="java.lang.String"/>
 	<field name="fromDate" class="java.util.Date"/>
 	<field name="toDate" class="java.util.Date"/>
-	<field name="noOfDays" class="java.lang.Integer"/>
-	<variable name="noofdays" class="java.lang.Integer" resetType="Group" resetGroup="employee name" calculation="Sum">
+	<field name="noOfDays" class="java.math.BigDecimal"/>
+	<variable name="noofdays" class="java.math.BigDecimal" resetType="Group" resetGroup="employee name" calculation="Sum">
 		<variableExpression><![CDATA[$F{noOfDays}]]></variableExpression>
 	</variable>
 	<variable name="variable1" class="java.lang.String"/>
@@ -75,9 +75,9 @@
 					<text><![CDATA[Total leave]]></text>
 				</staticText>
 				<textField>
-					<reportElement x="424" y="3" width="100" height="20"/>
-					<textElement textAlignment="Center"/>
-					<textFieldExpression class="java.lang.Integer"><![CDATA[$V{noofdays}]]></textFieldExpression>
+					<reportElement x="428" y="3" width="100" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<textFieldExpression class="java.math.BigDecimal"><![CDATA[$V{noofdays}]]></textFieldExpression>
 				</textField>
 			</band>
 		</groupFooter>
@@ -145,15 +145,15 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{employee.name}]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement x="424" y="9" width="100" height="20"/>
+			<textField>
+				<reportElement x="428" y="10" width="100" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{noOfDays}]]></textFieldExpression>
+				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{noOfDays}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch"/>
+		<band height="44" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
 		<band height="53" splitType="Stretch">
