--- a/MitosisTimesheet/src/main/webapp/reports/employeeDetailsReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/employeeDetailsReport.jrxml
@@ -96,16 +96,16 @@ order by lob_name,employee_master.employee_id]]>
 				<line>
 					<reportElement x="492" y="0" width="1" height="28"/>
 				</line>
-				<staticText>
-					<reportElement x="269" y="0" width="224" height="27"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<text><![CDATA[Total]]></text>
-				</staticText>
 				<textField isBlankWhenNull="true">
-					<reportElement x="491" y="3" width="63" height="25"/>
+					<reportElement x="492" y="0" width="63" height="25"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression class="java.lang.Integer"><![CDATA[$V{totalemployees}]]></textFieldExpression>
 				</textField>
+				<staticText>
+					<reportElement x="390" y="0" width="100" height="25"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[Total:]]></text>
+				</staticText>
 			</band>
 		</groupFooter>
 	</group>
@@ -195,16 +195,16 @@ order by lob_name,employee_master.employee_id]]>
 			<line>
 				<reportElement x="491" y="16" width="1" height="26"/>
 			</line>
-			<staticText>
-				<reportElement x="268" y="16" width="223" height="26"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<text><![CDATA[Total Employees]]></text>
-			</staticText>
 			<textField isBlankWhenNull="true">
 				<reportElement x="493" y="16" width="62" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.Long"><![CDATA[$F{employee_count}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="267" y="16" width="223" height="26"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<text><![CDATA[Total Employees]]></text>
+			</staticText>
 		</band>
 	</summary>
 </jasperReport>
